# token0

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
benchmarks/: bench_ax_tree.py  bench_ax_tree_models.py  bench_ax_tree_real.py  bench_fuzzy_cache.py  bench_video.py  bench_video_models.py  generate_test_images.py  run.py
benchmarks/results/: benchmark_llava-llama3_20260326_183436.json  benchmark_llava_7b_20260326_183604.json  benchmark_minicpm-v_20260326_183832.json  benchmark_moondream_20260326_161627.json  benchmark_moondream_20260326_162436.json  benchmark_moondream_20260326_174753.json  benchmark_moondream_20260326_175851.json  benchmark_moondream_20260326_183914.json
src/: cli.py  main.py
src/api/: auth.py
src/models/: db.py  request.py
src/optimization/: analyzer.py  cache.py  prompt_classifier.py  router.py  transformer.py
src/providers/: anthropic.py  google.py  ollama.py  openai.py
src/storage/: objects.py  postgres.py  redis.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_ax_tree.py  test_cache.py  test_config.py  test_estimate.py  test_instructor_hook.py  test_langchain_callback.py  test_litellm_hook.py  test_pdf.py  test_providers.py  test_router.py  test_saliency.py  test_streaming.py  test_transformer.py  test_video.py
token0/: cli.py  config.py  instructor_hook.py  langchain_callback.py  litellm_hook.py  main.py
token0/api/: auth.py
token0/models/: request.py
token0/optimization/: analyzer.py  ax_tree.py  cache.py  (+6 more)
(+14 files in other folders)
